# Hearts2

./: CMakeLists.txt  CREDITS  ChangeLog  Hearts_en_CA.ts  LICENSE  README.md  background.cpp  background.h  cardscene.cpp  cardscene.h  config.cpp  config.h  cpus.h  deck.cpp  deck.h  define.h  draggablescoregroup.cpp  draggablescoregroup.h  engine.cpp  engine.h  hearts.desktop.in  help.html  help_fr.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resourcepaths.h  resources.qrc  sounds.cpp  sounds.h  statistics.cpp  statistics.h  statistics.ui  turnarrow.cpp  turnarrow.h
translations/: Hearts_en_CA.ts  Hearts_fr_CA.ts  Hearts_ru_RU.ts  help.html  help_fr.html  help_ru.html
